--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "linkedin-bot",
+  "name": "linkedin-bot-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "puppeteer": "^23.0.0",
     "fs-extra": "^11.1.0",
     "dotenv": "^16.3.1"
