--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkedin-bot-api",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "puppeteer": "^23.0.0",
     "fs-extra": "^11.1.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
