--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkedin-bot-api",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^23.0.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "fs-extra": "^11.1.0",
     "dotenv": "^16.3.1",
     "multer": "^1.4.5-lts.1",
