--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "super-social-bot",
-  "version": "3.0.0",
+  "name": "super-bot-instagram",
+  "version": "1.0.0",
+  "description": "Bot de automação para LinkedIn e Instagram via Puppeteer",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^23.0.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.0",
+    "express": "^4.18.0",
     "fs-extra": "^11.1.0",
-    "dotenv": "^16.3.1",
     "multer": "^1.4.5-lts.1",
-    "axios": "^1.6.0"
+    "puppeteer": "^22.0.0",
+    "puppeteer-extra": "^3.3.0",
+    "puppeteer-extra-plugin-stealth": "^2.11.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
